<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HiasFragment">

    <LinearLayout
        android:id="@+id/linear1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:padding="16dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/img1"
            android:src="@drawable/hias1"
            android:contentDescription="@string/deskripsi_img1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvnama1"
                android:text="@string/tanaman_hias_1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:padding="16dp"
        android:layout_below="@+id/linear1">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/img2"
            android:src="@drawable/hias2"
            android:contentDescription="@string/deskripsi_img2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvnama2"
                android:text="@string/tanaman_hias_2"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>