<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TamanFragment">

    <LinearLayout
        android:id="@+id/taman1"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/image1"
            android:src="@drawable/hias5"
            android:contentDescription="@string/deskripsi_image1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tivinama1"
                android:text="@string/tanaman_tanam_1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/taman2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_below="@+id/taman1">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/image2"
            android:src="@drawable/hias6"
            android:contentDescription="@string/deskripsi_image2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tivinama2"
                android:text="@string/tanaman_tanam_2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>